--- a/styles/color.css
+++ b/styles/color.css
@@ -30,8 +30,8 @@ body {color:#888;}
 #outerfooter{ background:#282e38;}
 
 /* Link color */
-/*a, a:visited, .colortext, .colortext a, .colortext a:visited{color:#dc3c00}
-a:hover, .colortext:hover, .colortext:hover{color:#f77a4b}*/
+a, a:visited, .colortext, .colortext a, .colortext a:visited{color:#dc3c00}
+a:hover, .colortext:hover, .colortext:hover{color:#f77a4b}
 
 /* Text color */
 .customcolor{color:#757575;}
@@ -169,3 +169,26 @@ tr.odd td {background: #F2F7FC;}
 /* Footer */
 #footer{color:#bebebe;}
 #footer a, #footer a:visited{color:#bebebe;}
+
+
+/* --- disqus css -- */
+#disqus_thread {
+color: #ffffff;
+border-style: 0px solid;
+border-color: #cccccc;
+padding: 5px;
+}
+
+#dsq-content #dsq-comments .dsq-comment-body {
+color: #fff;
+background-color: #000000;
+} 
+
+.dsq-reaction-body {
+color: #fff;
+}
+
+.dsq-reaction-retweets {
+color: #ccc;
+}
+/*--- end disqus css --*/
