--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,7 @@ code {
 }
 #outercontainer{width:100%;}
 
-#outerheader, #outerafterheader, #outerslider, #outerbeforecontent, #outermain,  #outeraftercontent, #outerfooter{width:100%; margin:0 auto}
+#outerheader, #outerafterheader, #outerslider, #outerbeforecontent, #outermain,  #outeraftercontent, #outerfooter,#outerafterheaderwhite{width:100%; margin:0 auto}
 
 /* HEADER */
 #outerheader{
@@ -259,7 +259,17 @@ code {
     top: 0;
     z-index: -1;
 }
-
+#outerafterheaderwhite{
+	margin-bottom:40px;
+	padding-bottom: 100px;
+	position: relative;
+	z-index: 20;
+	margin:-30px 0px 0px 0px;
+}
+#containerwhite{
+	top:40px;
+	position: relative;
+}
 
 /* CONTENT */
 #outermain{padding:50px 0 50px 0;}
