--- a/styles/fixed-layout.css
+++ b/styles/fixed-layout.css
@@ -6,7 +6,7 @@ USE THIS STYLE SHEET FOR FIXED LAYOUT STYLE
 
 */
 body{ 
-	background:url(../images/bg-body.png);
+	background:url(../images/bg-body.jpg);
 }
 #bodychild{width:1020px;}
 
