--- a/styles/style.css
+++ b/styles/style.css
@@ -766,9 +766,12 @@ tr.odd td {}
 
 .sn{list-style-type:none; margin:0 0 0 0; height:32px; padding:0; float:right} 
 .sn li{list-style-type:none; margin:0; padding:0 5px 0 0; display:inline; background:transparent; border:0px!important;} 
-.sn span{height:32px; width:32px; display:inline; display:inline-block}
-.icon-img{background-position:0 0;}
-.icon-img:hover{background-position:0 -32px !important;}
+.sn span{height:64px; width:64px; display:inline; display:inline-block}
+.icon-img{
+background-position:0 0;
+zoom:0.5;
+}
+.icon-img:hover{background-position:0 -64px !important;}
 
 .addr{font-family: 'Cuprum', sans-serif; font-size:16px;}
 
