--- a/styles/color.css
+++ b/styles/color.css
@@ -108,7 +108,7 @@ hr {
 
 /* Portfolio */
 .ts-display-pf-text h2 a, .ts-display-pf-text h2 a:visited{color:#535e70;}
-.ts-display-pf-text h2 a:hover{color:#dc3c00}
+.ts-display-pf-text h2 a:hover{color:#0096e8}
 #ts-display-portfolio  li{background:#f9f9f9; border-bottom:solid 1px #e2e2e2}
 
 /* Sidebar */
