--- a/styles/fixed-layout.css
+++ b/styles/fixed-layout.css
@@ -146,7 +146,7 @@ body{
 	
 	
 	/* Portfolio 4 Column */
-	#ts-display-pf-col-4 li{width:300px;}
+/*	#ts-display-pf-col-4 li{width:300px;}
 	#ts-display-pf-col-4 .ts-display-pf-img{
 		width:300px;
 		height:100%
@@ -160,7 +160,7 @@ body{
 	#ts-display-pf-col-4  .ts-display-pf-img a .rollover{
 		width:300px;
 		height:100%
-	}
+	}*/
 	
 	/* Footer */
 	.sn{float:none;}
