--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -198,7 +198,8 @@
     /* Note: Design for a width of 480px */
 
     @media only screen and (min-width: 480px) and (max-width: 767px) {
-        .container { width: 420px; }
+        .container { width: 420px;
+		}
         .columns, .column { margin: 0; }
 		
 		.container .one.column,
