--- a/styles/appstyle.css
+++ b/styles/appstyle.css
@@ -122,7 +122,64 @@ main h2 {
 }
 
 
+/* support */
+#support > h1 {
+	font: bold 32px/1.0 'Lucida Grande', sans-serif;
+	margin: 20px 0 5px;
+}
 
+#support div {
+	margin-bottom: 40px;
+	
+}
+#support div::before {
+	content: '';
+	display: block;
+	width:480px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid hsla(0,0%,0%,.1);
+}
+
+#support div dt{
+	font-size: 110%;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+#support div dd{
+	font-size: 80%;
+	margin-bottom: 10px;
+}
+
+#maininfo a.download {
+	font-size: 16px;
+	padding: 0.5em 1em;
+	margin:  1px;
+	
+	font-weight: bold;
+	line-height: 1.2;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: white;
+	text-indent: 0;
+	white-space: nowrap;
+	text-shadow: 0 1px 2px hsla(0,0%,0%,.4);
+	
+	display: inline-block;
+	border-radius: 4px;
+	border: none !important;
+	background: -webkit-linear-gradient(hsla(0,0%,100%,.05), hsla(0,0%,0%,.05));
+	background:         linear-gradient(hsla(0,0%,100%,.05), hsla(0,0%,0%,.05));
+	background-color: hsl(196,70%,60%);
+	box-shadow: 0 0   0 1px hsla(0,0%,  0%,.2) inset,
+	            0 1px 0 1px hsla(0,0%,100%,.1) inset,
+	            0 1px 2px   hsla(0,0%,  0%,.2);
+	-webkit-transition: background 0.3s;
+	        transition: background 0.3s;
+}
+#maininfo a.download:hover {
+	background-color: hsl(196,75%,50%);
+}
 
 
 
