--- a/styles/appstyle.css
+++ b/styles/appstyle.css
@@ -195,11 +195,12 @@ main h2 {
 #maintenance img{
 	float: left;
 }
-#maintenance div h2{
+#maintenance div p{
 	float: left;
 	margin-top: 50px;
 	margin-left: 30px;
 	font-weight: bold;
+	font-size: 120%;
 }
 
 
