--- a/styles/appstyle.css
+++ b/styles/appstyle.css
@@ -192,11 +192,11 @@ main h2 {
 	width: 70%;
 	margin-left: 15%;
 }
-#maintenance img{
-	float: left;
+#maintenance div img{
+	float:left;
 }
 #maintenance div p{
-	float: left;
+	float:left;
 	margin-top: 40px;
 	margin-left: 30px;
 	font-weight: bold;
