--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,7 @@ code {
 
 /* CONTENT */
 #outermain{padding:50px 0 50px 0;}
+#outermain{padding:50px 0 50px 0;}
 #maincontent{}
 #content{float:left;}
 #content.positionright{float:right;}
