--- a/styles/inner.css
+++ b/styles/inner.css
@@ -299,7 +299,7 @@ section .content span{
 	content: '';
 	display: block;
 	/*width:80px;*/
-	margin:0 40px 0 40px;
+	margin:50px 40px 0 40px;
 	border-bottom: 1px solid hsla(0,0%,0%,.3);
 }
 
