--- a/styles/color.css
+++ b/styles/color.css
@@ -111,7 +111,7 @@ hr {
 .num1 section.content a.button:hover{background-color: #62a545;}
 
 
-.list_num2{background-color: #2e72a4;}
+.list_num2{background-color: #3082a2;}
 .num2 section.content h2{color: #fff;}
 .num2 section.content h3{color: #fff;}
 .num2 section.content p{color: #fff;}
