--- a/styles/appstyle.css
+++ b/styles/appstyle.css
@@ -111,6 +111,17 @@ main h2 {
 	text-align: left;
 	margin-bottom: 10px;
 	margin-top: 30px;
+	color: #096f8a;
+	/*background-color: #08dd00;*/
+	;
+}
+
+#update h3 img{
+	margin-left: 15px;
+	/*margin-top: -10px;*/
+	margin-bottom: -10px;
+	width: 40px;
+	height:40px;
 }
 
 #update div {
